[ Issue # 10 ] Fixed the footer not blurred out issue.

--- a/style.css
+++ b/style.css
@@ -924,7 +924,10 @@ object {
 }
 
 /** Blur out while modal dialog is displaying. */
-body.modal-open #main, body.modal-open #masthead, body.modal-open .widget-area{
+body.modal-open #main,
+body.modal-open #masthead,
+body.modal-open .widget-area,
+body.modal-open .site-footer{
     -webkit-filter: blur(5px) grayscale(90%);
 }
 
